2012-05-12  Thomas Schwinge  <thomas@codesourcery.com>

	* io/dup3.c (dup3): Rename to __dup3, add weak alias for dup3.
	* sysdeps/unix/syscalls.list (dup3): Likewise.
	* libio/freopen.c (freopen): Invoke __dup3 instead of dup3.
	* libio/freopen64.c (freopen64): Invoke __dup3 instead of dup3.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/stackguard-macros.h (STACK_CHK_GUARD) [__x86_64__]: Use
	"%c1" with "i" (offsetof (tcbhead_t, stack_guard)).

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/tls-macros.h (TLS_LE): Use mov instead of movq to load
	thread pointer.
	(TLS_IE): Use mov/add instead of movq/addq to load thread
	pointer.
	(TLS_GD_PREFIX): New.
	(TLS_GD): Use it.

2012-05-11  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/bits/fenv.h (__fenv_stfsr): Add __volatile__.
	* sysdeps/sparc/fpu/fpu_control.h (_FPU_GETCW):	Likewise.
	(_FPU_SETCW): Likewise.

2012-05-10  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-trampoline.S: Check if RTLD_SAVESPACE_SSE
	is 32-byte aligned.

2012-05-11  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #11837]
	* iconvdata/gb18030.c: Update tables.
	(BODY for FROM_LOOP): Update.  Handle two-byte encoded non-BMP
	characters specially.
	(BODY for TO_LOOP): Add encoding of missing ranges.

2012-05-11  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #13673]
	* sysdeps/mach/hurd/accept4.c: Replace FSF snail mail address with URL.
	* sysdeps/mach/hurd/dup3.c: Likewise.
	* sysdeps/mach/hurd/readlinkat.c: Likewise.
	* sysdeps/powerpc/memmove.c:: Likewise.

2012-05-10  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-machine.h (elf_machine_rela_relative): Handle
	R_X86_64_RELATIVE64 only if RTLD_BOOTSTRAP isn't defined.

2012-05-10  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/elf.h (R_X86_64_RELATIVE64): New.
	(R_X86_64_NUM): Updated.
	* sysdeps/x86_64/dl-machine.h (elf_machine_rela): Handle
	R_X86_64_RELATIVE64.  Always use Elf64_Addr with R_X86_64_64.